Committing via upload final
Overwrite old files/finalize project for submissions

--- a/index.html
+++ b/index.html
@@ -15,31 +15,27 @@
 <body>
   <nav class="white" role="navigation">
     <div class="nav-wrapper container">
-      <img id="logo-container" href="#" class="brand-logo" src="images/pokelogosized.png" alt="lavenderized-pokemon logo">Logo</img>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="#"></a></li>
-      </ul>
+      <img id="logo-container" href="#" class="brand-logo" src="images/pokelogosized.png" alt="lavenderized-pokemon logo" class="point"></img>
+
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#"></a></li>
       </ul>
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"></i></a>
     </div>
   </nav>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
       <div class="container">
-        <br><br>
+        <br/>
         <h1 class="header center white-text">Welcome to Lavender Town</h1>
         <div class="row center">
           <h3 class="header col s12 light white-text">...We Hope You Never, Ever Leave Us</h3>
         </div>
         <div class="row center">
-
+          <br/><br/>
         </div>
-        <br><br>
-
       </div>
     </div>
     <div class="parallax"><img src="images/lavendergyard.png" alt="Lavender-Tinted Graveyard"></div>
@@ -48,110 +44,162 @@
 
   <div class="container">
     <div class="section">
-
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send black-text"></i></h3>
           <h4></h4>
-          <p class="center-align dark">
-          Legend has it that Lavender Town is haunted. Maybe it's the profusion of graveyards. Maybe it's all the ghosts. Maybe it's the monsters who roam the streets, or the fact that no one who has gone there lives to tell their tale.
-          Either way....
-          Legend is right.
-          </p>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-
-
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 black-text"></h5>
-        </div>
+          <p class="center-align dark"><h6>
+            Legend has it that Lavender Town is haunted. Maybe it's the profusion of graveyards. Maybe it's all the ghosts. Maybe it's the monsters who roam the streets, or the fact that no one who has gone there lives to tell their tale.
+            Either way....
+            Legend is right.
+          </h6>
+        </p>
       </div>
     </div>
-    <div class="parallax"><img src="images/japanese_grvyd.png" alt="Lavender-tinted Japanese Graveyard 2"></div>
-  </div>
-
-  <div class="container">
-    <!--   Icon Section   -->
-    <div class="row" background-color="#beb1d5">
-      <div class="col s4 m4">
-        <div class="icon-block">
-          <h2 class="center deep-purple-darken-3-text" id="banette"><img src="images/banette_sml.png">BANETTE</i></h2>
-          <h5 class="center">Ghost-Type Pokemon</h5>
-
-          <p class="light">
-            <ul class="data center deep-purple-darken-3-text">
-              <li id="banHP"></li>
-              <li id="banAttack"></li>
-              <li id="banDefense"></li>
-            </ul>
-          </p>
-        </div>
-      </div>
-
-      <div class="col s4 m4">
-        <div class="icon-block">
-          <h2 class="center deep-purple-darken-3-text" id="yamask"><img src="images/yamask_sized.png" alt="Yamask Pokemon">YAMASK</img></h2>
-          <h5 class="center">Ghost-Type Pokemon</h5>
-
-          <p class="light">
-            <ul class="data center deep-purple-darken-3-text">
-              <li id="yamHP"></li>
-              <li id="yamAttack"></li>
-              <li id="yamDefense"></li>
-            </ul>
-          </p>
-        </div>
-      </div>
-
-      <div class="col s4 m4">
-        <div class="icon-block">
-          <h2 class="center deep-purple-darken-3-text" id="gourgeist"><img src="images/gourgeist_sml.jpg" alt="Gourgeist Pokemon">GOURGEIST</i></h2>
-          <h5 class="center">Grass, Ghost-Type Pokemon</h5>
-
-          <p class="light">
-            <ul class="data center deep-purple-darken-3-text">
-              <li id="gourHP"></li>
-              <li id="gourAttack"></li>
-              <li id="gourDefense"></li>
-            </ul>
-          </p>
-        </div>
-      </div>
-    </div>
-
   </div>
 </div>
-  </div>
 
 
-  <div class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h3 class="header col s12 black-text">Leaving so soon? OH NO! But where did the exit go?!!?</h3>
-        </div>
+
+<div class="parallax-container valign-wrapper">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <div class="row center">
+        <h5 class="header col s12 black-text"></h5>
       </div>
     </div>
-    <div class="parallax"><img src="images/kyotogyard.jpg" alt="Lavender-tinted Graveyard 3"></div>
   </div>
+  <div class="parallax"><img src="images/japanese_grvyd.png" alt="Lavender-tinted Japanese Graveyard 2"></div>
+</div>
 
-  <footer class="page-footer black">
+<div class="container">
+  <div class="row" background-color="#beb1d5">
+    <div class="col s4 m4">
+      <div class="icon-block">
+        <h2 class="center deep-purple-darken-3-text" id="banName">BANETTE</h2>
+        <h5 class="center">Ghost-Type Pokemon</h5>
 
-  </footer>
+        <p class="light">
+          <ul class="data center deep-purple-darken-3-text">
+            <li>
+              <h5>
+                <ul>
+                  <li>
+                    <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/banette_sml.png" alt="Banette Pokemon">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4"></br><i class="material-icons right">more</i></span>
+                        <p></p>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4" class="title">BaNeTTe<i class="material-icons right">close</i></span>
+                        <p id="banetteDiv"></p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </h5>
+            </li>
+          </ul>
+        </p>
+      </div>
+    </div>
+
+    <div class="col s4 m4">
+      <div class="icon-block">
+        <h2 class="center deep-purple-darken-3-text" id="yamask">YAMASK</h2>
+        <h5 class="center">Ghost-Type Pokemon</h5>
+
+        <p class="light">
+          <ul class="data center deep-purple-darken-3-text">
+            <li>
+              <h5>
+                <ul>
+                  <li>
+                    <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/yamask_sized.png" alt="Yamask Pokemon">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4"></br><i class="material-icons right">more</i></span>
+                        <p></p>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4" class="title">YaMAsK<i class="material-icons right">close</i></span>
+                        <p id="yamaskDiv"></p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </h5>
+            </li>
+          </ul>
+        </p>
+      </div>
+    </div>
+
+    <div class="col s4 m4">
+      <div class="icon-block">
+        <h2 class="center deep-purple-darken-3-text" id="gourgeist">GOURGEIST</h2>
+        <h5 class="center">Ghost-Type Pokemon</h5>
+
+        <p class="light">
+          <ul class="data center deep-purple-darken-3-text">
+            <li>
+              <h5>
+                <ul>
+                  <li>
+                    <div class="card">
+                      <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="images/gourgeist_sml.jpg" alt="Gourgeist Pokemon">
+                      </div>
+                      <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4"></br><i class="material-icons right">more</i></span>
+                        <p></p>
+                      </div>
+                      <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4" class="title">GOurGEiSt<i class="material-icons right">close</i></span>
+                        <p id="gourgeistDiv"></p>
+                      </div>
+                    </div>
+                  </li>
+                </ul>
+              </h5>
+            </li>
+          </ul>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+
+<div class="parallax-container valign-wrapper">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <div class="row center">
+        <h3 class="header col s12 black-text">Leaving so soon? OH NO! But where did the exit go?!!?</h3>
+      </div>
+    </div>
+  </div>
+  <div class="parallax"><img src="images/kyotogyard.jpg" alt="Lavender-tinted Graveyard 3"></div>
+</div>
+
+<footer class="page-footer black">
+  <p class="center white-text">Copyright 2018 Dr. Petrova Venkman / Venkman Scientific</p>
+</footer>
 
 
-  <!--  Scripts-->
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
-  <script src="main.js"></script>
+<!--  Scripts-->
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="js/materialize.js"></script>
+<script src="js/init.js"></script>
+<script src="main.js"></script>
 
-  </body>
+</body>
+
 </html>
